src/main/java/org/qcri/rheem/latin/parser/LatinParser.java
// Generated from LatinParser.g4 by ANTLR 4.7

package org.qcri.rheem.latin.parser;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LatinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PREOP=1, POSTOP=2, BINOP=3, ERROR=4, OPERATOR_NAME=5, FUNC_NAME=6, PLATFORM=7, 
		NUMBER=8, PLEFT=9, PRIGHT=10, ACCO_LEFT=11, ACCO_RIGHT=12, COR_LEFT=13, 
		COR_RIGHT=14, LOAD=15, AS=16, COLON=17, COMA=18, SEMI_COLON=19, ID=20, 
		ASSING=21, ARROW=22, ARROW_I=23, BOOLEAN=24, INT=25, LONG=26, FLOAT=27, 
		BIGDECIMAL=28, BIGINTEGER=29, DOUBLE=30, DATETIME=31, STRING=32, JSON=33, 
		SQL=34, WITH=35, DOT=36, TRUE=37, FALSE=38, BAG=39, IMPORT=40, INCLUDE=41, 
		BROADCAST=42, QUOTEDSTRING=43, MULTILINE_QUOTEDSTRING=44, COMMENT=45, 
		LINE_COMMENT=46, WS=47, SYMBOL=48;
	public static final int
		RULE_query = 0, RULE_statement = 1, RULE_operator_statement = 2, RULE_lambda = 3, 
		RULE_real_function = 4, RULE_type = 5, RULE_source_statement = 6, RULE_as_clause = 7, 
		RULE_type_load = 8, RULE_pair = 9, RULE_sink_statement = 10, RULE_expr = 11, 
		RULE_atom = 12, RULE_functionExpr = 13, RULE_constant = 14, RULE_sub_id = 15, 
		RULE_boolean_const = 16, RULE_with_platform = 17, RULE_with_broadcast = 18, 
		RULE_bag_stattement = 19, RULE_bag_header = 20, RULE_bag_header_titles = 21, 
		RULE_bag_header_element = 22, RULE_bag_header_params = 23, RULE_bag_set_param = 24, 
		RULE_class_define = 25, RULE_include_statement = 26;
	public static final String[] ruleNames = {
		"query", "statement", "operator_statement", "lambda", "real_function", 
		"type", "source_statement", "as_clause", "type_load", "pair", "sink_statement", 
		"expr", "atom", "functionExpr", "constant", "sub_id", "boolean_const", 
		"with_platform", "with_broadcast", "bag_stattement", "bag_header", "bag_header_titles", 
		"bag_header_element", "bag_header_params", "bag_set_param", "class_define", 
		"include_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, "'PLATFORM'", null, "'('", "')'", 
		"'{'", "'}'", "'['", "']'", "'LOAD'", "'AS'", "':'", "','", "';'", null, 
		"'='", "'->'", "'<-'", "'BOOLEAN'", "'INT'", "'LONG'", "'FLOAT'", "'BIGDECIMAL'", 
		"'BIGINTEGER'", "'DOUBLE'", "'DATETIME'", "'STRING'", "'JSON'", "'SQL'", 
		"'WITH'", "'.'", "'TRUE'", "'FALSE'", "'BAG'", "'IMPORT'", "'INCLUDE'", 
		"'BROADCAST'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PREOP", "POSTOP", "BINOP", "ERROR", "OPERATOR_NAME", "FUNC_NAME", 
		"PLATFORM", "NUMBER", "PLEFT", "PRIGHT", "ACCO_LEFT", "ACCO_RIGHT", "COR_LEFT", 
		"COR_RIGHT", "LOAD", "AS", "COLON", "COMA", "SEMI_COLON", "ID", "ASSING", 
		"ARROW", "ARROW_I", "BOOLEAN", "INT", "LONG", "FLOAT", "BIGDECIMAL", "BIGINTEGER", 
		"DOUBLE", "DATETIME", "STRING", "JSON", "SQL", "WITH", "DOT", "TRUE", 
		"FALSE", "BAG", "IMPORT", "INCLUDE", "BROADCAST", "QUOTEDSTRING", "MULTILINE_QUOTEDSTRING", 
		"COMMENT", "LINE_COMMENT", "WS", "SYMBOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LatinParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private static final int    BINARY  = 0;
	    static Map<String, Integer> precedenceMap = new HashMap<String, Integer>();
	    static Map<String, Integer> operatorMap   = new HashMap<String, Integer>();
	    static Map<String, Integer> functionMap   = new HashMap<String, Integer>();


	    public static void addPrecedenceMap(String symbol, int code){
	        precedenceMap.put(symbol, code);
	    }

	    public static Integer getPrecedence(Token op) {
	        Integer tmp = precedenceMap.get(op.getText());
	        return (tmp != null)? tmp: -1;
	    }

	    public static Integer getNextPrecedence(Token op) {
	        System.out.println(op.getType()+"  ");
	        Integer p = getPrecedence(op);
	        if (op.getType() == PREOP)              return p;
	        else if (op.getType() == BINOP)         return p+1;
	        else if (op.getType() == POSTOP)        return p+1;
	        else if (op.getType() == OPERATOR_NAME) return p+1;
	        else if (op.getType() == FUNC_NAME)     return p+1;
	        throw new IllegalArgumentException(op.getText());
	    }

	    public static void addOperatorMap(String symbol, int code){
	        operatorMap.put(symbol, code);
	    }

	    public static void addFunctionMap(String symbol, int code){
	        functionMap.put(symbol, code);
	    }

	public LatinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Class_defineContext> class_define() {
			return getRuleContexts(Class_defineContext.class);
		}
		public Class_defineContext class_define(int i) {
			return getRuleContext(Class_defineContext.class,i);
		}
		public List<Bag_set_paramContext> bag_set_param() {
			return getRuleContexts(Bag_set_paramContext.class);
		}
		public Bag_set_paramContext bag_set_param(int i) {
			return getRuleContext(Bag_set_paramContext.class,i);
		}
		public List<Include_statementContext> include_statement() {
			return getRuleContexts(Include_statementContext.class);
		}
		public Include_statementContext include_statement(int i) {
			return getRuleContext(Include_statementContext.class,i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATOR_NAME) | (1L << ID) | (1L << IMPORT))) != 0)) {
				{
				setState(58);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(54);
					statement();
					}
					break;
				case 2:
					{
					setState(55);
					class_define();
					}
					break;
				case 3:
					{
					setState(56);
					bag_set_param();
					}
					break;
				case 4:
					{
					setState(57);
					include_statement();
					}
					break;
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SinkStatementContext extends StatementContext {
		public Sink_statementContext sink_statement() {
			return getRuleContext(Sink_statementContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(LatinParser.SEMI_COLON, 0); }
		public With_platformContext with_platform() {
			return getRuleContext(With_platformContext.class,0);
		}
		public SinkStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterSinkStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitSinkStatement(this);
		}
	}
	public static class BaseStatementContext extends StatementContext {
		public TerminalNode ID() { return getToken(LatinParser.ID, 0); }
		public TerminalNode ASSING() { return getToken(LatinParser.ASSING, 0); }
		public TerminalNode SEMI_COLON() { return getToken(LatinParser.SEMI_COLON, 0); }
		public Operator_statementContext operator_statement() {
			return getRuleContext(Operator_statementContext.class,0);
		}
		public Source_statementContext source_statement() {
			return getRuleContext(Source_statementContext.class,0);
		}
		public With_platformContext with_platform() {
			return getRuleContext(With_platformContext.class,0);
		}
		public BaseStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterBaseStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitBaseStatement(this);
		}
	}
	public static class BagStatementContext extends StatementContext {
		public TerminalNode ID() { return getToken(LatinParser.ID, 0); }
		public TerminalNode ASSING() { return getToken(LatinParser.ASSING, 0); }
		public Bag_stattementContext bag_stattement() {
			return getRuleContext(Bag_stattementContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(LatinParser.SEMI_COLON, 0); }
		public BagStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterBagStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitBagStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new BaseStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(ID);
				setState(64);
				match(ASSING);
				setState(67);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPERATOR_NAME:
					{
					setState(65);
					operator_statement();
					}
					break;
				case LOAD:
					{
					setState(66);
					source_statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(69);
					with_platform();
					}
				}

				setState(72);
				match(SEMI_COLON);
				}
				break;
			case 2:
				_localctx = new SinkStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				sink_statement();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(75);
					with_platform();
					}
				}

				setState(78);
				match(SEMI_COLON);
				}
				break;
			case 3:
				_localctx = new BagStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				match(ID);
				setState(81);
				match(ASSING);
				setState(82);
				bag_stattement();
				setState(83);
				match(SEMI_COLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_statementContext extends ParserRuleContext {
		public Operator_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_statement; }
	 
		public Operator_statementContext() { }
		public void copyFrom(Operator_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OperatorStatementContext extends Operator_statementContext {
		public Token name;
		public TerminalNode OPERATOR_NAME() { return getToken(LatinParser.OPERATOR_NAME, 0); }
		public List<LambdaContext> lambda() {
			return getRuleContexts(LambdaContext.class);
		}
		public LambdaContext lambda(int i) {
			return getRuleContext(LambdaContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(LatinParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(LatinParser.COMA, i);
		}
		public With_broadcastContext with_broadcast() {
			return getRuleContext(With_broadcastContext.class,0);
		}
		public OperatorStatementContext(Operator_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterOperatorStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitOperatorStatement(this);
		}
	}

	public final Operator_statementContext operator_statement() throws RecognitionException {
		Operator_statementContext _localctx = new Operator_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operator_statement);
		int _la;
		try {
			_localctx = new OperatorStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((OperatorStatementContext)_localctx).name = match(OPERATOR_NAME);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PREOP) | (1L << FUNC_NAME) | (1L << NUMBER) | (1L << PLEFT) | (1L << ID) | (1L << TRUE) | (1L << FALSE) | (1L << QUOTEDSTRING))) != 0)) {
				{
				setState(88);
				lambda();
				}
			}

			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(91);
				match(COMA);
				setState(92);
				lambda();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(98);
				with_broadcast();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LatinParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(LatinParser.ARROW, 0); }
		public TerminalNode ACCO_LEFT() { return getToken(LatinParser.ACCO_LEFT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ACCO_RIGHT() { return getToken(LatinParser.ACCO_RIGHT, 0); }
		public Real_functionContext real_function() {
			return getRuleContext(Real_functionContext.class,0);
		}
		public LambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitLambda(this);
		}
	}

	public final LambdaContext lambda() throws RecognitionException {
		LambdaContext _localctx = new LambdaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lambda);
		int _la;
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(ID);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(102);
					type();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(ID);
				setState(106);
				match(ARROW);
				setState(107);
				match(ACCO_LEFT);
				setState(108);
				expr(0);
				setState(109);
				match(ACCO_RIGHT);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(110);
					type();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				expr(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				real_function();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Real_functionContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LatinParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LatinParser.ID, i);
		}
		public TerminalNode ARROW() { return getToken(LatinParser.ARROW, 0); }
		public TerminalNode DOT() { return getToken(LatinParser.DOT, 0); }
		public TerminalNode PLEFT() { return getToken(LatinParser.PLEFT, 0); }
		public TerminalNode PRIGHT() { return getToken(LatinParser.PRIGHT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Real_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterReal_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitReal_function(this);
		}
	}

	public final Real_functionContext real_function() throws RecognitionException {
		Real_functionContext _localctx = new Real_functionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_real_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(ID);
			setState(118);
			match(ARROW);
			setState(119);
			match(ID);
			setState(120);
			match(DOT);
			setState(121);
			match(ID);
			setState(122);
			match(PLEFT);
			setState(123);
			match(PRIGHT);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(124);
				type();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(LatinParser.COLON, 0); }
		public TerminalNode BOOLEAN() { return getToken(LatinParser.BOOLEAN, 0); }
		public TerminalNode INT() { return getToken(LatinParser.INT, 0); }
		public TerminalNode LONG() { return getToken(LatinParser.LONG, 0); }
		public TerminalNode FLOAT() { return getToken(LatinParser.FLOAT, 0); }
		public TerminalNode BIGDECIMAL() { return getToken(LatinParser.BIGDECIMAL, 0); }
		public TerminalNode BIGINTEGER() { return getToken(LatinParser.BIGINTEGER, 0); }
		public TerminalNode DOUBLE() { return getToken(LatinParser.DOUBLE, 0); }
		public TerminalNode DATETIME() { return getToken(LatinParser.DATETIME, 0); }
		public TerminalNode STRING() { return getToken(LatinParser.STRING, 0); }
		public TerminalNode ID() { return getToken(LatinParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(COLON);
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << BOOLEAN) | (1L << INT) | (1L << LONG) | (1L << FLOAT) | (1L << BIGDECIMAL) | (1L << BIGINTEGER) | (1L << DOUBLE) | (1L << DATETIME) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Source_statementContext extends ParserRuleContext {
		public TerminalNode LOAD() { return getToken(LatinParser.LOAD, 0); }
		public TerminalNode QUOTEDSTRING() { return getToken(LatinParser.QUOTEDSTRING, 0); }
		public As_clauseContext as_clause() {
			return getRuleContext(As_clauseContext.class,0);
		}
		public Source_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterSource_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitSource_statement(this);
		}
	}

	public final Source_statementContext source_statement() throws RecognitionException {
		Source_statementContext _localctx = new Source_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_source_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(LOAD);
			setState(131);
			match(QUOTEDSTRING);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(132);
				as_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class As_clauseContext extends ParserRuleContext {
		public TerminalNode AS() { return getToken(LatinParser.AS, 0); }
		public TerminalNode PLEFT() { return getToken(LatinParser.PLEFT, 0); }
		public PairContext pair() {
			return getRuleContext(PairContext.class,0);
		}
		public TerminalNode PRIGHT() { return getToken(LatinParser.PRIGHT, 0); }
		public Type_loadContext type_load() {
			return getRuleContext(Type_loadContext.class,0);
		}
		public As_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_as_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterAs_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitAs_clause(this);
		}
	}

	public final As_clauseContext as_clause() throws RecognitionException {
		As_clauseContext _localctx = new As_clauseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_as_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(AS);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << JSON) | (1L << SQL))) != 0)) {
				{
				setState(136);
				type_load();
				}
			}

			setState(139);
			match(PLEFT);
			setState(140);
			pair();
			setState(141);
			match(PRIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_loadContext extends ParserRuleContext {
		public TerminalNode JSON() { return getToken(LatinParser.JSON, 0); }
		public TerminalNode ID() { return getToken(LatinParser.ID, 0); }
		public TerminalNode SQL() { return getToken(LatinParser.SQL, 0); }
		public Type_loadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterType_load(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitType_load(this);
		}
	}

	public final Type_loadContext type_load() throws RecognitionException {
		Type_loadContext _localctx = new Type_loadContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type_load);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << JSON) | (1L << SQL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
